set list product layout

--- a/website/templates/home_page_content.html
+++ b/website/templates/home_page_content.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!-- Feadtued Categories -->
 
 <div class="categories">
@@ -171,6 +172,27 @@
                 <i class="fa fa-star-o"></i>
             </div>
             <p>$50.00</p>
+        </div>
+    </div>
+</div>
+<div class="brands">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-5">
+                <img src="{% static 'images/logo-godrej.png' %}">
+            </div>
+            <div class="col-5">
+                <img src="{% static 'images/logo-oppo.png' %}">
+            </div>
+            <div class="col-5">
+                <img src="{% static 'images/logo-coca-cola.png' %}">
+            </div>
+            <div class="col-5">
+                <img src="{% static 'images/logo-paypal.png' %}">
+            </div>
+            <div class="col-5">
+                <img src="{% static 'images/logo-philips.png' %}">
+            </div>
         </div>
     </div>
 </div>
