--- a/website/templates/menu.html
+++ b/website/templates/menu.html
@@ -1,11 +1,13 @@
 {% load static %}
+
+
 <div class="navbar">
     <div class="logo">
         <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
-            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="{% url 'list_products' %}">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
