--- a/website/templates/product_detail.html
+++ b/website/templates/product_detail.html
@@ -1,6 +1,5 @@
 {% load static %}
-{% extends 'blank_layout.html' %}
 
 {% block content %}
-{% include 'list_products' %}
+{% include 'product_description.html' %}
 {% endblock %}
