--- a/website/templates/home_page_content.html
+++ b/website/templates/home_page_content.html
@@ -2,13 +2,16 @@
 
 
   <!-- Featured Products -->
-{% block content %}
   <div class="small-container">
     <h2 class="title">Featured Products</h2>
     <div class="row">
+
+        {% for products in featured_products %}
+
         <div class="col-4">
-            <a href="product_details.html"><img src="{% static 'images/product-1.jpg' %}"></a>
-            <h4>Red Printed T-Shirt</h4>
+            <a href="{% url 'product_details' products.id %}"><img src="{{ products.image.url }}"></a>
+            <h4>{{ products.title }}</h4>
+            <p>{{ products.price }}</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -16,50 +19,19 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>$50.00</p>
         </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-2.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-3.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-4.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-    </div>
+       
+    {% endfor %}
     <h2 class="title">Latest Products</h2>
     <div class="row">
+
+
+            {% for products in latest_products %}
+
         <div class="col-4">
-            <img src="{% static 'images/product-5.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
+            <a href="{% url 'product_details' products.id %}"><img src="{{ products.image.url }}"></a>
+            <h4>{{ products.title }}</h4>
+            <p>{{ products.price }}</p>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -67,115 +39,9 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>$50.00</p>
         </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-6.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-7.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-8.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
+       
+    {% endfor %}
     </div>
-    <div class="row">
-        <div class="col-4">
-            <img src="{% static 'images/product-9.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-10.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-11.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-        <div class="col-4">
-            <img src="{% static 'images/product-12.jpg' %}">
-            <h4>Red Printed T-Shirt</h4>
-            <div class="rating">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>
-            <p>$50.00</p>
-        </div>
-    </div>
+
 </div>
-<div class="brands">
-    <div class="small-container">
-        <div class="row">
-            <div class="col-5">
-                <img src="{% static 'images/logo-godrej.png' %}">
-            </div>
-            <div class="col-5">
-                <img src="{% static 'images/logo-oppo.png' %}">
-            </div>
-            <div class="col-5">
-                <img src="{% static 'images/logo-coca-cola.png' %}">
-            </div>
-            <div class="col-5">
-                <img src="{% static 'images/logo-paypal.png' %}">
-            </div>
-            <div class="col-5">
-                <img src="{% static 'images/logo-philips.png' %}">
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
