--- a/website/templates/orders.html
+++ b/website/templates/orders.html
@@ -8,6 +8,6 @@
                     {% endfor %}
                 </div>
                 {% else %}
-{% include 'cart_container.html' %}
+{% include 'order_container.html' %}
 {% endif %}
 {% endblock %}
