--- a/website/templates/cart_container.html
+++ b/website/templates/cart_container.html
@@ -1,4 +1,8 @@
 {% load static %}
+{% load multiply %}
+{% load sub_total  %}
+
+{% if cart and cart.added_items.all %}
 <div class="small-container cart-page">
     <table>
         <tbody><tr>
@@ -6,70 +10,44 @@
             <th>Quantity</th>
             <th>Subtotal</th>
         </tr>
+        {% for cart_items in cart.added_items.all %}
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="{% static 'images/buy-1.jpg' %}">
+                    <img src="{{ cart_items.product.image.url }}">
                     <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
+                        <p>{{ cart_items.product.title }}</p>
+                        <small>Price: ${{ cart_items.product.price }}</small>
                         <br>
-                        <a href="">Remove</a>
+                        <a href="{% url 'remove' cart_items.id %}">Remove</a>
                     </div>
                 </div>
             </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
+            <td><input type="number" disabled value="{{ cart_items.quantity }}"></td>
+            <td>${% multiply cart_items.product.price  cart_items.quantity %}</td>
         </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="{% static 'images/buy-2.jpg' %}">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="{% static 'images/buy-3.jpg' %}">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
+    {% endfor %}
+
     </tbody></table>
+
     <div class="total-price">
         <table>
-            <tbody><tr>
-                <td>Subtotal</td>
-                <td>$200.00</td>
-            </tr>
-            <tr>
-                <td>Tax</td>
-                <td>$35.00</td>
-            </tr>
             <tr>
                 <td>Total</td>
-                <td>$230.00</td>
+                <td>${% sub_total cart %}</td>
             </tr>
         
         <tr><td colspan="2"> 
-            <button>Confirm</button> </td></tr>
+            <form action="{% url 'checkout' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" name="total" id="" value="{% sub_total cart %}">
+            <button class="btn" type="submit">Checkout</button> </td></tr>
+        </form>
         </tbody></table>
 
     </div>
 </div>
+
+{% else %}
+<p>Empty cart</p>
+{% endif %}
