--- a/website/templates/menu.html
+++ b/website/templates/menu.html
@@ -13,6 +13,8 @@
             <li><a href="{% url 'account' %}">Account</a></li>
             {% else %}
             <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'orders' %}">Orders</a></li>
+
             {% endif %}
 
         </ul>
@@ -20,6 +22,5 @@
     {% if user.is_authenticated %}
     <a href="{% url 'cart' %}"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
     {% endif %}
-
         <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
     </div>
