--- a/website/templates/product_description.html
+++ b/website/templates/product_description.html
@@ -3,23 +3,17 @@
     <div class="row">
         <div class="col-2">
             <img src="{{ products.image.url }}" width="100%" id="ProductImg">
-
         </div>
         <div class="col-2">
             <p>{{ products.title }}</p>
             <h1>{{ products.title }}</h1>
             <h4>${{ products.price }}</h4>
-            <select>
-                <option>Select Size</option>
-                <option>XXL</option>
-                <option>XL</option>
-                <option>L</option>
-                <option>M</option>
-                <option>S</option>
-            </select>
-            <input type="number" value="1">
-            <a href="" class="btn">Add To Cart</a>
-
+        <form method="post" action="{% url 'add_to_cart' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="hidden" name="product_id" value="{{ products.id }}">
+            <input type="number" value="1" name="quantity">
+            <button type="submit" class="btn">Add To Cart</button>
+        </form>
             <h3>Product Details <i class="fa fa-indent"></i></h3>
             <br>
             <p>{{ products.description }}</p>
